void changeCredentials(credentials: Credentials) nie jest poprawną deklaracją metody w Javie. Przed kolejnym commitem proponuję przejrzeć http://agaykhan.republika.pl/javastart.html Poza tym dodałem ftims.p.lodz.pl.(boże ratuj).dataModel jako zależność do Gradla.

--- a/android-client/android-client/build.gradle
+++ b/android-client/android-client/build.gradle
@@ -10,6 +10,7 @@ apply plugin: 'com.android.application'
 
 repositories {
     jcenter()
+    mavenLocal()
 }
 
 android {
@@ -35,4 +36,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.+'
     compile 'com.google.android.gms:play-services:4.2.42'
+    compile 'ftims.p.lodz.pl:dataModel:0.0.1-SNAPSHOT'
 }
