--- a/server/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/server/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
+					   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+					   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
   	<display-name>server</display-name>
 
     <servlet>
@@ -12,7 +14,7 @@
 
 	<servlet-mapping>
  		<servlet-name>rest</servlet-name>
- 		<url-pattern>/*</url-pattern>
+ 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
     <session-config>
@@ -21,4 +23,7 @@
         </session-timeout>
     </session-config>
     
+    <welcome-file-list>
+    	<welcome-file>/WEB-INF/hello.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
