Mój mały framework do injecta, wpięty do Androida, ciekawe czy działa =).

--- a/android-client/android-client/src/main/AndroidManifest.xml
+++ b/android-client/android-client/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="pl.lodz.p.ftims.geocaching" >
 
     <application
+        android:name="pl.lodz.p.ftims.geocaching.logic.inject.InjectingApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
