--- a/server/server/pom.xml
+++ b/server/server/pom.xml
@@ -47,6 +47,11 @@
             <version>4.3.5.Final</version>
         </dependency>
         <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
