--- a/android-client/android-client/src/main/AndroidManifest.xml
+++ b/android-client/android-client/src/main/AndroidManifest.xml
@@ -18,13 +18,12 @@
             </intent-filter>
         </activity>
 
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+        <!--<meta-data-->
+            <!--android:name="com.google.android.gms.version"-->
+            <!--android:value="@integer/google_play_services_version" />-->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
-    </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -36,5 +35,80 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+
+        <!-- <uses-library android:name="com.google.android.maps"/> -->
+
+        <activity
+            android:name=".GUI.Logowanie"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".GUI.Profil"
+            android:label="@string/title_activity_profil" >
+        </activity>
+        <!-- Dodane do menu popup -->
+        <activity
+            android:name="com.projekt.Profil"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".GUI.Dodaj_wskazowke_1"
+            android:label="@string/title_activity_dodaj_wskazowke_1"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".GUI.Dodaj_wskazowke_2"
+            android:label="@string/title_activity_dodaj_wskazowke_2" >
+        </activity>
+        <activity
+            android:name=".GUI.Edycja_wskazowki"
+            android:label="@string/title_activity_edycja_wskazowki" >
+        </activity>
+        <activity
+            android:name=".GUI.Ranking"
+            android:label="@string/title_activity_ranking" >
+        </activity>
+        <!--<activity-->
+            <!--android:name=".GUI.Mapa"-->
+            <!--android:label="@string/title_activity_mapa" >-->
+        <!--</activity>-->
+
+        <!--<meta-data-->
+            <!--android:name="com.google.android.gms.version"-->
+            <!--android:value="@integer/google_play_services_version" />-->
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".GUI.Mapy"
+            android:label="@string/title_activity_mapy" >
+        </activity>
+        <activity
+            android:name=".GUI.ZmianaHasla"
+            android:label="@string/title_activity_zmiana_hasla" >
+        </activity>
+        <activity
+            android:name=".GUI.informacje_o_wskazowce"
+            android:label="@string/title_activity_informacje_o_wskazowce" >
+        </activity>
+    </application>
 
 </manifest>
