--- a/server/server/pom.xml
+++ b/server/server/pom.xml
@@ -16,6 +16,12 @@
     </properties>
     
     <dependencies>
+    
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
 
         <!-- NIE USUWAC TYCH ZALEZNOSCI -->
 		
