Trochę poformatowałęm interfejsy, wzbogaciłem Accessy o to co będzie mi raczej niezbędne i powtykałem u siebie wykorzystania accessów

--- a/android-client/android-client/build.gradle
+++ b/android-client/android-client/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.2'
+        classpath 'com.android.tools.build:gradle:0.14.2'
     }
 }
 apply plugin: 'com.android.application'
@@ -15,7 +15,7 @@ repositories {
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.0.2"
+    buildToolsVersion "21.1.1"
 
     defaultConfig {
         applicationId "pl.lodz.p.ftims.geocaching"
@@ -34,7 +34,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.+'
+    compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.google.android.gms:play-services:4.2.42'
     compile 'ftims.p.lodz.pl:dataModel:0.0.1-SNAPSHOT'
 }
