--- a/server/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/server/src/main/webapp/WEB-INF/web.xml
@@ -6,9 +6,7 @@
 
     <servlet>
  		<servlet-name>rest</servlet-name>
- 		<servlet-class>
-  			org.springframework.web.servlet.DispatcherServlet
- 		</servlet-class>
+ 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
  		<load-on-startup>1</load-on-startup>
 	</servlet>
 
