--- a/server/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/server/src/main/webapp/WEB-INF/web.xml
@@ -4,17 +4,40 @@
 					   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
   	<display-name>server</display-name>
 
-    <servlet>
- 		<servlet-name>rest</servlet-name>
- 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
- 		<load-on-startup>1</load-on-startup>
-	</servlet>
+	<listener>
+	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/app-context.xml</param-value>
+	</context-param>
+    
+   <servlet>
+		<servlet-name>rest</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/rest-servlet.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	
 	<servlet-mapping>
  		<servlet-name>rest</servlet-name>
  		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
+	<filter>
+        <filter-name>openEntityManagerInViewFilter</filter-name>
+        <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>        
+    </filter>
+
+    <filter-mapping>
+        <filter-name>openEntityManagerInViewFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
     <session-config>
         <session-timeout>
             30
