--- a/android-client/android-client/build.gradle
+++ b/android-client/android-client/build.gradle
@@ -43,6 +43,6 @@ dependencies {
     compile 'commons-io:commons-io:2.4'
     compile 'com.thoughtworks.xstream:xstream:1.4.7'
     compile 'org.apache.httpcomponents:httpcore:4.4'
-    compile 'org.apache.httpcomponents:httpclient:4.3.6'
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5'
     compile 'ftims.p.lodz.pl:dataModel:0.0.1-SNAPSHOT'
 }
