--- a/android-client/android-client/build.gradle
+++ b/android-client/android-client/build.gradle
@@ -41,8 +41,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.google.android.gms:play-services:4.2.42'
     compile 'commons-io:commons-io:2.4'
-    compile 'com.thoughtworks.xstream:xstream:1.4.7'
-    compile 'org.apache.httpcomponents:httpcore:4.4'
+    compile("com.thoughtworks.xstream:xstream:1.4.7") {
+        exclude module: 'xmlpull'
+    }
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5'
     compile 'ftims.p.lodz.pl:dataModel:0.0.1-SNAPSHOT'
 }
