--- a/android-client/android-client/src/main/AndroidManifest.xml
+++ b/android-client/android-client/src/main/AndroidManifest.xml
@@ -2,28 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pl.lodz.p.ftims.geocaching" >
 
-    <application
-        android:name="pl.lodz.p.ftims.geocaching.logic.inject.InjectingApplication"
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".MapActivity"
-            android:label="@string/title_activity_map" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
         <!--<meta-data-->
             <!--android:name="com.google.android.gms.version"-->
             <!--android:value="@integer/google_play_services_version" />-->
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_key" />
+    <meta-data
+        android:name="com.google.android.maps.v2.API_KEY"
+        android:value="@string/google_maps_key" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -36,7 +20,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
+    <application
+        android:name="pl.lodz.p.ftims.geocaching.logic.inject.InjectingApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -60,7 +45,7 @@
         </activity>
 
         <!-- Dodane do menu popup -->
-        <activity
+<!--    <activity  TODO: Domyślić się o co tu chodzi
             android:name="com.projekt.Profil"
             android:label="@string/app_name" >
             <intent-filter>
@@ -68,7 +53,7 @@
 
                 <category android:name="android.intent.category.LAUCHER" />
             </intent-filter>
-        </activity>
+        </activity>-->
         <activity
             android:name=".GUI.Dodaj_wskazowke_1"
             android:label="@string/title_activity_dodaj_wskazowke_1"
