Poprawione DAO zgodnie z zaleceniami Michała
Do pewnych metod nadal brakuje metod od webservice, aby mogło się
zbudować należy dodać dataModel w build.gradle. Ja u siebie spakowałem
dataMode do jara i wrzuciłem, ale nie mogę zacommitować tego pliku więc
ktoś to musi rozwiązać w jakiś sposób

--- a/android-client/android-client/src/main/assets/httpClientProperties.properties
+++ b/android-client/android-client/src/main/assets/httpClientProperties.properties
@@ -1,2 +1,7 @@
-ProfileAccess= http://hot-dir.info:8080
-ChallengeAccess= http://hot-dir.info:8080
+ChallengeAddress= http://hot-dir.info:8080/rest/challenge
+ChallengesAddress= http://hot-dir.info:8080/rest/challenges
+RankingAddress= http://hot-dir.info:8080/rest/ranking
+LoginAddress= http://hot-dir.info:8080/rest/login
+PasswordAddress= http://hot-dir.info:8080/rest/password
+ProfileAddress= http://hot-dir.info:8080/rest/profile
+SolutionAddress= http://hot-dir.info:8080/rest/solution
