--- a/android-client/android-client/build.gradle
+++ b/android-client/android-client/build.gradle
@@ -4,9 +4,11 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'org.robolectric:robolectric-gradle-plugin:0.14.1'
     }
 }
 apply plugin: 'com.android.application'
+apply plugin: 'robolectric'
 
 repositories {
     jcenter()
@@ -24,11 +26,17 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    sourceSets {
+        androidTest {
+            setRoot('src/androidTest')
         }
     }
     compileOptions {
@@ -40,14 +48,28 @@ android {
     }
 }
 
+robolectric {
+    include '**/*Test.class'
+}
+
 dependencies {
+    androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'eu.codearte.catch-exception:catch-exception:1.3.2'
+    androidTestCompile 'org.robolectric:robolectric:2.4'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.google.android.gms:play-services:4.2.42'
+    compile 'com.google.android.gms:play-services:6.5.87'
     compile 'commons-io:commons-io:2.4'
     compile("com.thoughtworks.xstream:xstream:1.4.7") {
         exclude module: 'xmlpull'
     }
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5'
     compile 'ftims.p.lodz.pl:dataModel:0.0.1-SNAPSHOT'
+}
+
+apply plugin: 'idea'
+idea {
+    module {
+        testOutputDir = file('build/test-classes/debug')
+    }
 }
