Dodanie nagłówka Content-Type: application/xml do postów w dao

--- a/android-client/android-client/src/main/assets/httpClientProperties.properties
+++ b/android-client/android-client/src/main/assets/httpClientProperties.properties
@@ -1,7 +1,7 @@
-ChallengeAddress= http://hot-dir.info:8080/rest/challenge
-ChallengesAddress= http://hot-dir.info:8080/rest/challenges
-RankingAddress= http://hot-dir.info:8080/rest/ranking
-LoginAddress= http://hot-dir.info:8080/rest/login
-PasswordAddress= http://hot-dir.info:8080/rest/password
-ProfileAddress= http://hot-dir.info:8080/rest/profile
-SolutionAddress= http://hot-dir.info:8080/rest/solution
+ChallengeAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/challenge
+ChallengesAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/challenges
+RankingAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/ranking
+LoginAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/login
+PasswordAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/password
+ProfileAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/profile
+SolutionAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/solution
