--- a/android-client/android-client/src/main/assets/httpClientProperties.properties
+++ b/android-client/android-client/src/main/assets/httpClientProperties.properties
@@ -3,5 +3,6 @@ ChallengesAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/challenges
 RankingAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/ranking
 LoginAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/login
 PasswordAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/password
-ProfileAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/profile
+ShowProfileAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/showprofile
+CreateProfileAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/createprofile
 SolutionAddress= http://hot-dir.info:8080/server-1.0-SNAPSHOT/rest/solution
