--- a/android-client/android-client/build.gradle
+++ b/android-client/android-client/build.gradle
@@ -64,7 +64,7 @@ dependencies {
         exclude module: 'xmlpull'
     }
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5'
-    compile 'ftims.p.lodz.pl:dataModel:0.0.1-SNAPSHOT'
+    //compile 'ftims.p.lodz.pl:dataModel:0.0.1-SNAPSHOT'
 }
 
 apply plugin: 'idea'
