--- a/android-client/android-client/src/main/AndroidManifest.xml
+++ b/android-client/android-client/src/main/AndroidManifest.xml
@@ -8,9 +8,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but are recommended.
-
-
+         Google Maps Android API v2, but are recommended.
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -50,8 +48,7 @@
 
                 <category android:name="android.intent.category.LAUCHER" />
             </intent-filter>
-        </activity>
-
+        </activity>
         -->
 
         <activity
@@ -109,7 +106,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Lista_dostepnych_wyzwan"
+            android:label="@string/title_activity_lista_dostepnych_wyzwan" >
+        </activity>
     </application>
 
 </manifest>
-
