--- a/android-client/android-client/src/main/AndroidManifest.xml
+++ b/android-client/android-client/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but are recommended.
+         Google Maps Android API v2, but are recommended.
+
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -48,7 +49,8 @@
 
                 <category android:name="android.intent.category.LAUCHER" />
             </intent-filter>
-        </activity>
+        </activity>
+
         -->
 
         <activity
@@ -102,12 +104,11 @@
             android:label="@string/title_activity_lista__wskazowek" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".Lista_dostepnych_wyzwan"
+            android:name=".GUI.Lista_dostepnych_wyzwan"
             android:label="@string/title_activity_lista_dostepnych_wyzwan" >
         </activity>
     </application>
